; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_graphics.c_alpha_blend_bmp_pixels.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_graphics.c_alpha_blend_bmp_pixels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@PixelFormatPAlpha = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i32, i32*, i32, i32, i32, i32)* @alpha_blend_bmp_pixels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alpha_blend_bmp_pixels(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = inttoptr i64 %24 to i32*
  store i32* %25, i32** %17, align 8
  store i32 0, i32* %19, align 4
  br label %26

26:                                               ; preds = %92, %8
  %27 = load i32, i32* %19, align 4
  %28 = load i32, i32* %14, align 4
  %29 = icmp slt i32 %27, %28
  br i1 %29, label %30, label %95

30:                                               ; preds = %26
  store i32 0, i32* %18, align 4
  br label %31

31:                                               ; preds = %88, %30
  %32 = load i32, i32* %18, align 4
  %33 = load i32, i32* %13, align 4
  %34 = icmp slt i32 %32, %33
  br i1 %34, label %35, label %91

35:                                               ; preds = %31
  %36 = load i32*, i32** %12, align 8
  %37 = load i32, i32* %15, align 4
  %38 = load i32, i32* %19, align 4
  %39 = mul nsw i32 %37, %38
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %36, i64 %40
  %42 = load i32, i32* %18, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = load i32, i32* %44, align 4
  store i32 %45, i32* %21, align 4
  %46 = load i32, i32* %21, align 4
  %47 = and i32 %46, -16777216
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %50, label %49

49:                                               ; preds = %35
  br label %88

50:                                               ; preds = %35
  %51 = load i32*, i32** %17, align 8
  %52 = load i32, i32* %18, align 4
  %53 = load i32, i32* %10, align 4
  %54 = add nsw i32 %52, %53
  %55 = load i32, i32* %19, align 4
  %56 = load i32, i32* %11, align 4
  %57 = add nsw i32 %55, %56
  %58 = call i32 @GdipBitmapGetPixel(i32* %51, i32 %54, i32 %57, i32* %20)
  %59 = load i32, i32* %16, align 4
  %60 = load i32, i32* @PixelFormatPAlpha, align 4
  %61 = and i32 %59, %60
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %75

63:                                               ; preds = %50
  %64 = load i32*, i32** %17, align 8
  %65 = load i32, i32* %18, align 4
  %66 = load i32, i32* %10, align 4
  %67 = add nsw i32 %65, %66
  %68 = load i32, i32* %19, align 4
  %69 = load i32, i32* %11, align 4
  %70 = add nsw i32 %68, %69
  %71 = load i32, i32* %20, align 4
  %72 = load i32, i32* %21, align 4
  %73 = call i32 @color_over_fgpremult(i32 %71, i32 %72)
  %74 = call i32 @GdipBitmapSetPixel(i32* %64, i32 %67, i32 %70, i32 %73)
  br label %87

75:                                               ; preds = %50
  %76 = load i32*, i32** %17, align 8
  %77 = load i32, i32* %18, align 4
  %78 = load i32, i32* %10, align 4
  %79 = add nsw i32 %77, %78
  %80 = load i32, i32* %19, align 4
  %81 = load i32, i32* %11, align 4
  %82 = add nsw i32 %80, %81
  %83 = load i32, i32* %20, align 4
  %84 = load i32, i32* %21, align 4
  %85 = call i32 @color_over(i32 %83, i32 %84)
  %86 = call i32 @GdipBitmapSetPixel(i32* %76, i32 %79, i32 %82, i32 %85)
  br label %87

87:                                               ; preds = %75, %63
  br label %88

88:                                               ; preds = %87, %49
  %89 = load i32, i32* %18, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %18, align 4
  br label %31

91:                                               ; preds = %31
  br label %92

92:                                               ; preds = %91
  %93 = load i32, i32* %19, align 4
  %94 = add nsw i32 %93, 1
  store i32 %94, i32* %19, align 4
  br label %26

95:                                               ; preds = %26
  %96 = load i32, i32* @Ok, align 4
  ret i32 %96
}

declare dso_local i32 @GdipBitmapGetPixel(i32*, i32, i32, i32*) #1

declare dso_local i32 @GdipBitmapSetPixel(i32*, i32, i32, i32) #1

declare dso_local i32 @color_over_fgpremult(i32, i32) #1

declare dso_local i32 @color_over(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
